--- a/src/styles/swiper.module.scss
+++ b/src/styles/swiper.module.scss
@@ -16,6 +16,28 @@
       font-size: var(--chakra-fontSizes-3xl);
     }
   }
+
+  img[data-src] {
+    background-color: #f6f7f8;
+    background-image: linear-gradient(
+      to right,
+      #f6f7f8 0%,
+      #edeef1 20%,
+      #f6f7f8 40%,
+      #f6f7f8 100%
+    );
+    background-size: 80rem 14rem;
+    animation: placeholderShimmer 1s linear infinite forwards;
+
+    @keyframes placeholderShimmer {
+      from {
+        background-position: -40rem 0;
+      }
+      to {
+        background-position: 40rem 0;
+      }
+    }
+  }
 }
 
 .swiperSlide {
